--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,35 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(45deg, hsl(240, 100%, 90%), hsl(120, 100%, 80%));
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+
+.container{
+
+  width: 800px;
+  min-height: 100vh;
+  margin:0 auto;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  background: #00000062;
+  box-shadow: 10px 10px #000000c3;
+  color: black;
+  box-sizing: border-box;
+  
+}
+@media screen and (max-width:980px) {
+  .container{
+      width:90%
+  }
+  
 }
