--- a/src/global/pages/js-projects/js-projects.css
+++ b/src/global/pages/js-projects/js-projects.css
@@ -2,6 +2,7 @@
 .nav-buttons-div{
     display: flex;
     flex-direction: row;
+    justify-content: center;
     flex-wrap: wrap;
     padding: 1rem;
     gap: .2rem;
@@ -11,6 +12,11 @@
     text-decoration: none;
 }
 .nav-buttons-div div {
+
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     min-width: 150px;
     min-height: 50px;
     background-color: lightgray;
@@ -23,4 +29,14 @@
     align-items: center;
     justify-content: center;
     
+}
+.article h1{
+    text-align: center;
+    background:linear-gradient(to right, black, rgb(193, 193, 193));
+    background-clip: text;
+    color: rgba(0, 0, 0, 0);
+}
+.article p{
+    padding: 1rem;
+    text-align:center;
 }
