--- a/src/global/components/forms/login-form.css
+++ b/src/global/components/forms/login-form.css
@@ -1,11 +1,12 @@
 .login-form{
     background:radial-gradient(hsl(300, 47%, 85%)10%, hsl(300, 47%, 35%) 90%);
-    width: 400px;
+    width: 100%;
     min-height: 150px;
-    padding: .5rem;
+    
     border: 1px solid black;
     border-radius: 10px;
-
+    
+    
 
     display: flex;
     flex-direction: column;
